--- a/public/css/clp/clp.css
+++ b/public/css/clp/clp.css
@@ -69,7 +69,7 @@
 }
 .container .models {
   display: grid;
-  padding: 30px 0;
+  padding: 30px 10px;
   flex-wrap: wrap;
   grid-template-columns: repeat(2, 1fr);
   gap: 15px;
@@ -78,7 +78,6 @@
 @media (min-width: 768px) {
   .container .models {
     grid-template-columns: repeat(3, 1fr);
-    padding: 30px 0;
   }
 }
 @media (min-width: 1024px) {
