--- a/public/css/clp/clp.scss
+++ b/public/css/clp/clp.scss
@@ -25,7 +25,7 @@
 
     .models {
         display: grid;
-        padding: 30px 0;
+        padding: 30px 10px;
         flex-wrap: wrap;
         grid-template-columns: repeat(2, 1fr);
         gap: 15px;
@@ -33,7 +33,6 @@
 
         @include media('md') {
             grid-template-columns: repeat(3, 1fr);
-            padding: 30px 0;
         }
 
         @include media('lg') {
