--- a/public/css/plp/plp.scss
+++ b/public/css/plp/plp.scss
@@ -20,17 +20,40 @@
         display: none;
     }
 
-    .noResults {
-        margin: 70px 0 0;
-        font-family: $roboto;
+    .no-products-data {
+        margin: 30px 0;
         text-align: center;
-        font-size: 25px;
+        padding: 0 12px;
 
-        span {
-            color: red;
-            text-decoration: underline;
+        @include media('md') {
+            padding: 0;
+        }
+
+        .product-not-found {
+            width: 50%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 10px;
+
+            @include media('md') {
+                width: 30%;
+            }
+        }
+
+        .noResults {
+            margin: 10px 0 0;
+            font-family: $roboto;
+            font-size: 20px;
+
+            span {
+                color: red;
+                text-decoration: underline;
+                text-transform: uppercase;
+            }
         }
     }
+
+
 
     .sort-by-section {
         padding: 10px 12px;
@@ -190,7 +213,6 @@
 
     .plp-products-section {
         display: flex;
-        column-gap: 20px;
 
         .filters-section {
             position: fixed;
@@ -221,6 +243,7 @@
                 visibility: visible;
                 border-radius: 0;
                 box-shadow: none;
+                // border-right: 1px solid #2A353F;
             }
 
             .close-icon-section {
@@ -233,12 +256,13 @@
                 .close-icon {
                     position: absolute;
                     left: 50%;
-                    top: -50px;
+                    top: -60px;
                     transform: translateX(-50%);
                     padding: 3px 4px;
                     // border: 1px solid black;
                     border-radius: 50%;
                     background-color: $white;
+                    border: 1px solid black;
                     cursor: pointer;
 
                     i {
@@ -255,8 +279,10 @@
                 font-family: $opensans;
 
                 @include media('md') {
-                    text-align: start;
-                    border: none;
+                    text-transform: uppercase;
+                    color: orange;
+                    font-size: 25px;
+                    letter-spacing: 1px;
                 }
             }
 
@@ -267,6 +293,19 @@
 
                 @include media('md') {
                     height: auto;
+                }
+
+                .filter-models {
+                    margin: 20px 0;
+                    font-family: $roboto;
+                    text-transform: uppercase;
+                    font-weight: 300;
+                    text-align: center;
+                    cursor: pointer;
+
+                    &.active {
+                        font-weight: bold;
+                    }
                 }
             }
         }
@@ -283,6 +322,7 @@
             font-family: $roboto;
             letter-spacing: 1px;
             cursor: pointer;
+            z-index: 10;
 
             @include media('md') {
                 display: none;
@@ -316,7 +356,7 @@
                 @include media('md') {
                     grid-template-columns: repeat(3, 1fr);
                     padding: 0;
-                    padding-right: 20px;
+                    padding: 0px 20px;
                 }
 
                 @include media('lg') {
@@ -324,14 +364,43 @@
                 }
 
                 .product-tile {
-                    box-shadow: 0 0 10px lightgray;
                     cursor: pointer;
+                    position: relative;
+                    box-shadow: 0 0 10px lightgray;
+
+                    @include media('md') {
+                        transition: all .2s ease-in-out;
+
+                        &:hover {
+                            box-shadow: 0 0 20px lightblue;
+                            border-radius: 20px;
+                        }
+                    }
+
+                    .add-to-wishlist {
+                        position: absolute;
+                        top: 15px;
+                        right: 15px;
+                        font-size: 15px;
+                        padding: 8.5px 7px 4.5px;
+                        box-shadow: 0 0 10px lightgray;
+                        background-color: $white;
+                        border-radius: 50%;
+                    }
+
+                    .bi-heart-fill {
+                        color: red;
+                    }
 
                     .product-img {
                         width: 100%;
                         height: 200px;
-                        object-fit: cover;
+                        object-fit: contain;
                         padding: 10px;
+
+                        @include media('md') {
+                            object-fit: cover;
+                        }
                     }
 
                     .product-details {
