--- a/views/productsGrid.ejs
+++ b/views/productsGrid.ejs
@@ -1,31 +1,41 @@
-<p class="search-results">Search Results : <span>
-        <%= searchResultsCount %>
-    </span></p>
+<% if(searchResultsCount > 0) { %>
 
-<div class="products-grid">
-    <% products.forEach(product=> { %>
-        <div class="product-tile">
-            <img class="product-img" src="<%= product.images[0] %>" alt="<%= product.name%>">
-            <div class="product-details">
-                <p class="product-name">
-                    <%= product.name %>
-                </p>
-                <p class="product-listprice">
-                    $ <%= product.saleprice %>
-                    <% if(product.listprice) { %>
-                        <span class="product-saleprice">$<%= product.listprice %></span>
-                    <% } %>
-                </p>
-                <div class="product-colors">
-                    <% if(product.colors && Array.isArray(product.colors)) { %>
-                        <% product.colors.forEach(color => { %>
-                            <span style="background-color: <%= color %>;"></span>
-                        <% }) %>
-                    <%} else {%>
-                        <p>No colors available</p>
-                    <% } %>
+    <p class="search-results">Search Results : <span><%= searchResultsCount %></span></p>
+
+    <div class="model-name" data-mid="<%= model._id %>"></div>
+
+    <div class="products-grid">
+        <% products.forEach(product=> { %>
+            <div class="product-tile">
+                <i class="bi bi-heart add-to-wishlist"></i>
+                <img class="product-img" src="<%= product.images[0] %>" alt="<%= product.name%>">
+                <div class="product-details">
+                    <p class="product-name">
+                        <%= product.name %>
+                    </p>
+                    <p class="product-listprice">
+                        $ <%= product.saleprice %>
+                        <% if(product.listprice) { %>
+                            <span class="product-saleprice">$<%= product.listprice %></span>
+                        <% } %>
+                    </p>
+                    <div class="product-colors">
+                        <% if(product.colors && Array.isArray(product.colors)) { %>
+                            <% product.colors.forEach(color => { %>
+                                <span style="background-color: <%= color %>;"></span>
+                            <% }) %>
+                        <%} else {%>
+                            <p>No colors available</p>
+                        <% } %>
+                    </div>
                 </div>
             </div>
-        </div>
-        <% }) %>
-</div>
+            <% }) %>
+    </div>
+
+<% } else { %>
+    <div class="no-products-data">
+        <img class="product-not-found" src="/images/product_not_found.jpeg" alt="No products available image">
+        <p class="noResults">Sorry currently no products are available for <span>"<%= model.name %>"</span> model</p>
+    </div>
+<% } %>
